--- a/MCCHD_covid_figures_public.Rmd
+++ b/MCCHD_covid_figures_public.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "Missoula County COVID-19 Cases"
-date: "Data as of April 20, 2020"
+date: "Data as of April 19, 2020"
 output: pdf_document
 header-includes:
-    - \usepackage[labelformat=empty]{caption}
+    - \usepackage[labelformat=empty, font={Large, bf}]{caption}
+    
 ---
 
 ```{r setup, include=FALSE}
@@ -27,6 +28,8 @@ library(ggthemes)
 library(incidence)
 library(knitr)
 library(kableExtra)
+library(magick)
+library(webshot)
 jv_palette <- c("#330099","#CC0066","#FF6633", 
                  "#0099CC", "#FF9900","#CC6633",
                   "#FF3366", "#33CC99", "#33999")
@@ -39,8 +42,107 @@ cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442",
 output_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 covid_data <- read_rds(paste0(output_path, "Output/covid_data_clean.rds"))
+state_data <- read_rds(paste0(output_path, "Output/state_data_clean.rds")) %>% 
+   select(-age_group) %>% 
+   rename(age_group = age_group2)
+
+us_pop_data <- as.data.frame(c("0-9, 0.12", "10-19, 0.13", "20-29, 0.14", 
+                 "30-39, 0.13", "40-49, 0.12", "50-59, 0.13", 
+                 "60-69, 0.12", "70-79, 0.07", "80+, 0.04")) %>% 
+   rename(age_group = 1) %>% 
+   separate(age_group, c("age_group", "age_group_percent_us"), sep = ", ") %>% 
+   mutate(age_group_percent_us = as.numeric(age_group_percent_us),
+          us_pop = as.numeric(327167000))
 ```
 
+
+```{r}
+county_joined <- covid_data %>% 
+   select(case, age_group, age_group_percent, county_pop) %>% 
+   rename(region_pop = county_pop) %>% 
+   left_join(us_pop_data, by = "age_group") %>% 
+   mutate(total_cases = n()) %>% 
+   group_by(age_group) %>% 
+   mutate(group_cases = n(),
+          group_prop = group_cases/total_cases*100,
+          group_pop = age_group_percent*region_pop,
+          us_group_pop = age_group_percent_us*us_pop,
+          group_inc = group_cases/group_pop*100000,
+          stand_inc_group = group_inc*us_group_pop/100000) %>% 
+   ungroup() %>% 
+   distinct(age_group, .keep_all = TRUE) %>% 
+   mutate(region = "Missoula County",
+          stand_inc_sum = sum(stand_inc_group),
+          stand_inc = stand_inc_sum/us_pop*100000) %>% 
+   select(region, age_group, group_cases, group_prop, group_inc, 
+          stand_inc, stand_inc_sum, stand_inc_group, region_pop, age_group_percent) %>% 
+   arrange(age_group)
+   
+
+
+state_joined <- state_data %>% 
+   select(case, age_group, age_group2_percent, state_pop) %>% 
+   rename(region_pop = state_pop,
+          age_group_percent = age_group2_percent) %>% 
+   left_join(us_pop_data, by = "age_group") %>% 
+   mutate(total_cases = n()) %>% 
+   group_by(age_group) %>% 
+   mutate(group_cases = n(),
+          group_prop = group_cases/total_cases*100,
+          group_pop = age_group_percent*region_pop,
+          us_group_pop = age_group_percent_us*us_pop,
+          group_inc = group_cases/group_pop*100000,
+          stand_inc_group = group_inc*us_group_pop/100000) %>% 
+   ungroup() %>% 
+   distinct(age_group, .keep_all = TRUE) %>% 
+   mutate(region = "Montana",
+          stand_inc_sum = sum(stand_inc_group),
+          stand_inc = stand_inc_sum/us_pop*100000) %>% 
+   select(region, age_group, group_cases, group_prop, group_inc, 
+          stand_inc, stand_inc_sum, stand_inc_group, region_pop, age_group_percent) %>% 
+   arrange(age_group)
+
+
+county_state_joined <- rbind(county_joined, state_joined)
+
+stand_inc <- county_state_joined %>% 
+   distinct(region, .keep_all = TRUE) %>% 
+   select(region, stand_inc) %>% 
+   rename(Region = region,
+          "Incidence per 100,000 Population" = stand_inc)
+```
+
+
+```{r, fig.width = 8, fig.height = 6}
+covid_stand_inc <- county_state_joined %>% 
+   filter(region == "Missoula County") %>% 
+   ggplot() +
+     geom_col(aes(age_group, group_inc), fill = "steelblue") +
+     labs(title = "COVID-19 Cases in Missoula County by Age Group",
+          fill = "") +
+     ylab("Cases per 100,000 Population") +
+     xlab("Age Group (years)") +
+     theme_minimal() +
+     theme(title = element_text(size = 16, colour = "black"),
+           panel.grid = element_blank(),
+           panel.grid.major.y = element_line(colour = "grey"),
+           axis.text.x = element_text(size = 14, colour = "black", vjust = 0.4),
+           axis.text.y = element_text(size = 14, colour = "black"),
+           axis.title.y = element_text(size = 14, colour = "black",
+                                       margin = unit(c(0, 5, 0, 0), "mm")),
+           axis.title.x = element_text(size = 14, colour = "black",
+                                       margin = unit(c(5, 0, 0, 0), "mm")),
+           axis.line.x = element_blank(), 
+           axis.line.y = element_blank(), 
+           axis.ticks = element_blank()) +
+     scale_fill_manual(values = cbPalette) 
+
+#covid_stand_inc
+
+#ggsave("county_cases_age.jpg", width = 8, height = 6)
+```
+
+\pagebreak  
 
 ```{r}
 overall_summary <- covid_data %>% 
@@ -122,19 +224,37 @@ covid_summary <- rbind(overall_summary, age_group_summary, gender_summary,
    select("Data Category", "Number of Cases", 
           "Proportion of Cases (%)", "Incidence per 100,000 Population")
 
-
-kable(covid_summary, 
-      caption = "Missoula County COVID-19 Cases") %>% 
-   kable_styling() %>% 
-   row_spec(0, bold = TRUE) %>% 
+kable(covid_summary, caption = "Missoula County COVID-19 Cases", 
+      format = "latex", align = "c") %>% 
+   kable_styling(font_size = 10) %>% 
+   row_spec(0, bold = TRUE, font_size = 10) %>% 
    pack_rows("All Cases", 1, 1) %>% 
    pack_rows("Age Group (Years)", 2, 3) %>% 
    pack_rows("Gender", 4, 5) %>% 
    pack_rows("Travel History", 6, 7) %>% 
    pack_rows("Contact with Known Case", 8, 10) %>% 
    pack_rows("Community Spread", 11, 12) %>% 
-   footnote(c("Travel History: case left Missoula County.",
+   footnote(c("Cases are still under investigation. Some categories may not add up to total number of cases.",
+     "Travel History: case left Missoula County.",
      "Community Spread: no history of travel and no known contact with a known case."))
+```
+
+
+```{r, eval=FALSE, include=FALSE}
+kable(covid_summary) %>% 
+   kable_styling(font_size = 14) %>% 
+   row_spec(0, bold = TRUE, font_size = 15) %>% 
+   pack_rows("All Cases", 1, 1) %>% 
+   pack_rows("Age Group (Years)", 2, 3) %>% 
+   pack_rows("Gender", 4, 5) %>% 
+   pack_rows("Travel History", 6, 7) %>% 
+   pack_rows("Contact with Known Case", 8, 10) %>% 
+   pack_rows("Community Spread", 11, 12) %>% 
+   footnote(c("Cases are still under investigation. Some categories may not add up to total number of cases.",
+     "Travel History: case left Missoula County.",
+     "Community Spread: no history of travel and no known contact with a known case."))  %>% 
+   save_kable("county_table.jpeg")
+
 ```
 
 \clearpage  
@@ -146,20 +266,28 @@ date_10 <- format(Sys.Date() - 10, "%d %b %Y")
 
 covid_plot_onset <- covid_data %>% 
    ggplot() +
+     geom_rect(aes(xmin = Sys.Date() - 10, xmax = Sys.Date(), ymin=0, ymax=Inf),
+               fill = "gray85", alpha = 0.05) +
+     geom_label(aes(x = Sys.Date()-5, y = 4.5, 
+                    label = "Cases in shaded range \n may not yet be reported.")) +
      geom_col(aes(symptom_onset_date_new, case), 
               fill = "steelblue") +
-     labs(title = paste0("COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020", 
-                         " (Total cases = ", total_cases, ")"),
-          subtitle = paste0("Data current as of ", date_today, 
-                            ". Cases after ", date_10, " may not yet be reported.")) +
+     labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
+          subtitle = paste0("Total cases = ", total_cases)) +
      ylab("Number of Cases") +
      xlab("Symptom Onset Date") +
-     scale_x_date(date_breaks = "1 day", date_labels = "%d-%b") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  date_labels = "%d-%b") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 12, colour = "black"),
            panel.grid = element_blank(),
-           panel.grid.major.y = element_line(colour = "grey"),
+           panel.grid.major.y = element_line(colour = "gray75"),
            axis.text.x = element_text(size = 12, colour = "black", 
                                      angle = 90, vjust = 0.4),
            axis.text.y = element_text(size = 12, colour = "black"),
@@ -170,5 +298,8 @@ covid_plot_onset <- covid_data %>%
            axis.line.x = element_blank(), 
            axis.line.y = element_blank(), 
            axis.ticks = element_blank()) 
-covid_plot_onset
+
+#covid_plot_onset
+
+#ggsave("county_epi_curve.jpg", width = 10, height = 5)
 ```
