--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -4,7 +4,7 @@ author: "Ethan Walker, University of Montanta"
 date: "Data as of April 19, 2020"
 output: pdf_document
 header-includes:
-    - \usepackage[labelformat=empty]{caption}
+    - \usepackage[labelformat=empty, font={Large, bf}]{caption}
 ---
 
 ```{r setup, include=FALSE}
@@ -112,7 +112,7 @@ stand_inc <- county_state_joined %>%
 
 
 ```{r, fig.width = 10, fig.height = 6}
-covid_stand_inc <- county_state_joined %>% 
+covid_incidence <- county_state_joined %>% 
    ggplot() +
      geom_col(aes(age_group, group_inc, fill = region), position = "dodge") +
      labs(title = "COVID-19 Incidence in Missoula County by Age Group",
@@ -124,8 +124,7 @@ covid_stand_inc <- county_state_joined %>%
            title = element_text(size = 12, colour = "black"),
            panel.grid = element_blank(),
            panel.grid.major.y = element_line(colour = "grey"),
-           axis.text.x = element_text(size = 12, colour = "black", 
-                                     angle = 25, vjust = 0.4),
+           axis.text.x = element_text(size = 12, colour = "black", vjust = 0.4),
            axis.text.y = element_text(size = 12, colour = "black"),
            legend.text = element_text(size = 12, colour = "black"),
            axis.title.y = element_text(size = 12, colour = "black",
@@ -137,7 +136,7 @@ covid_stand_inc <- county_state_joined %>%
            axis.ticks = element_blank()) +
      scale_fill_manual(values = cbPalette) 
 
-covid_stand_inc
+covid_incidence
 ```
 
 \pagebreak  
@@ -229,16 +228,16 @@ kable(stand_inc, digits = 1,
    footnote(c("Standardized to US population age distribution"))
 
 
-kable(covid_summary, 
-      caption = "Missoula County COVID-19 Cases") %>% 
-   kable_styling() %>% 
-   row_spec(0, bold = TRUE) %>% 
+kable(covid_summary, caption = "Missoula County COVID-19 Cases",
+      format = "latex", align = "c") %>% 
+   kable_styling(font_size = 10) %>% 
+   row_spec(0, bold = TRUE, font_size = 10) %>% 
    pack_rows("All Cases", 1, 1) %>% 
    pack_rows("Age Group (Years)", 2, 3) %>% 
    pack_rows("Gender", 4, 5) %>% 
-   pack_rows("Travel History", 6, 7) %>% 
-   pack_rows("Contact with Known Case", 8, 10) %>% 
-   pack_rows("Community Spread", 11, 12) %>% 
+   pack_rows("Travel History", 6, 8) %>% 
+   pack_rows("Contact with Known Case", 9, 11) %>% 
+   pack_rows("Community Spread", 12, 13) %>% 
    footnote(c("Travel History: case left Missoula County.",
      "Community Spread: no history of travel and no known contact with a known case."))
 ```
@@ -297,18 +296,26 @@ plot(r_results)
 ```{r, fig.width = 10, fig.height = 6}
 total_cases <- sum(covid_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
-date_10 <- format(Sys.Date() - 10, "%d %b %Y")
+date_12 <- format(Sys.Date() - 12, "%d %b %Y")
 
 covid_plot_r <- county_r_clean %>% 
    ggplot() +
+     geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
+               fill = "gray85", alpha = 0.05) +
+     geom_label(aes(x = Sys.Date()-6, y = 2.5, 
+                    label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
      geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
-     labs(title = paste0("COVID-19 R-value in Missoula County, 2020", 
-                         " (Total cases = ", total_cases, ")"),
-          subtitle = paste0("Data current as of ", date_today, 
-                            ". Cases after ", date_10, " may not yet be reported.")) +
+     labs(title = "COVID-19 R-value in Missoula County, 2020",
+          subtitle = paste0("Total cases = ", total_cases)) +
      ylab("Rolling 7-day mean R-value") +
      xlab(" ") +
-     scale_x_date(date_breaks = "1 day", date_labels = "%d-%b") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  date_labels = "%d-%b") +
      scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
      geom_hline(yintercept = 1, size = 1.2, color = "black") +
      theme_minimal() +
@@ -336,35 +343,44 @@ covid_plot_r
 ```{r, fig.width = 10, fig.height = 6}
 total_cases <- sum(covid_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
-date_10 <- format(Sys.Date() - 10, "%d %b %Y")
+date_12 <- format(Sys.Date() - 12, "%d %b %Y")
 
 covid_plot_onset <- covid_data %>% 
    ggplot() +
+     geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
+               fill = "gray85", alpha = 0.05) +
+     geom_label(aes(x = Sys.Date()-6, y = 4.5, 
+                    label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
      geom_col(aes(symptom_onset_date_new, case, fill = symptom_onset_date_indicator)) +
-     labs(title = paste0("COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020", 
-                         " (Total cases = ", total_cases, ")"),
-          subtitle = paste0("Data current as of ", date_today, 
-                            ". Cases after ", date_10, " may not yet be reported."),
-          fill = "Onset date method") +
+     labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
+          subtitle = paste0("Total cases = ", total_cases),
+          fill = " ") +
      ylab("Number of Cases") +
      xlab("Symptom Onset Date") +
-     scale_x_date(date_breaks = "1 day", date_labels = "%d-%b") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  date_labels = "%d-%b") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 12, colour = "black"),
            panel.grid = element_blank(),
-           panel.grid.major.y = element_line(colour = "grey"),
+           panel.grid.major.y = element_line(colour = "gray75"),
            axis.text.x = element_text(size = 12, colour = "black", 
                                      angle = 90, vjust = 0.4),
            axis.text.y = element_text(size = 12, colour = "black"),
-           legend.text = element_text(size = 12, colour = "black"),
+           legend.position = "top",
            axis.title.y = element_text(size = 12, colour = "black",
                                        margin = unit(c(0, 5, 0, 0), "mm")),
            axis.title.x = element_text(size = 12, colour = "black",
                                        margin = unit(c(5, 0, 0, 0), "mm")),
+           legend.text = element_text(size = 12, colour = "black"),
            axis.line.x = element_blank(), 
            axis.line.y = element_blank(), 
-           axis.ticks = element_blank()) +
+           axis.ticks = element_blank())  +
      scale_fill_manual(values = cbPalette) +
      geom_vline(xintercept = as.numeric(as.Date("2020-03-16")), color = "black", 
               size = 1, linetype = "dashed") +
@@ -381,37 +397,41 @@ covid_plot_onset
 \pagebreak  
 
 ```{r, fig.width = 10, fig.height = 6}
-total_cases <- sum(covid_data$case)
-date_today <- format(Sys.Date(), "%d %b %Y")
-date_10 <- format(Sys.Date() - 10, "%d %b %Y")
-
 covid_plot_onset <- covid_data %>% 
    ggplot() +
+     geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
+               fill = "gray85", alpha = 0.05) +
+     geom_label(aes(x = Sys.Date()-6, y = 4.5, 
+                    label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
      geom_col(aes(symptom_onset_date_new, case, fill = age_group)) +
-     labs(title = paste0("COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020", 
-                         " (Total cases = ", total_cases, ")"),
-          subtitle = paste0("Data current as of ", date_today, 
-                            ". Cases after ", date_10, " may not yet be reported."),
-          fill = "Age group") +
+     labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
+          subtitle = paste0("Total cases = ", total_cases),
+          fill = " ") +
      ylab("Number of Cases") +
      xlab("Symptom Onset Date") +
-     scale_x_date(date_breaks = "1 day", date_labels = "%d-%b") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  date_labels = "%d-%b") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 12, colour = "black"),
            panel.grid = element_blank(),
-           panel.grid.major.y = element_line(colour = "grey"),
+           panel.grid.major.y = element_line(colour = "gray75"),
            axis.text.x = element_text(size = 12, colour = "black", 
                                      angle = 90, vjust = 0.4),
            axis.text.y = element_text(size = 12, colour = "black"),
-           legend.text = element_text(size = 12, colour = "black"),
            axis.title.y = element_text(size = 12, colour = "black",
                                        margin = unit(c(0, 5, 0, 0), "mm")),
            axis.title.x = element_text(size = 12, colour = "black",
                                        margin = unit(c(5, 0, 0, 0), "mm")),
+           legend.text = element_text(size = 12, colour = "black"),
            axis.line.x = element_blank(), 
            axis.line.y = element_blank(), 
-           axis.ticks = element_blank()) +
+           axis.ticks = element_blank())  +
      scale_fill_manual(values = cbPalette) +
      geom_vline(xintercept = as.numeric(as.Date("2020-03-16")), color = "black", 
               size = 1, linetype = "dashed") +
@@ -428,37 +448,42 @@ covid_plot_onset
 \pagebreak  
 
 ```{r, fig.width = 10, fig.height = 6}
-total_cases <- sum(covid_data$case)
-date_today <- format(Sys.Date(), "%d %b %Y")
-date_10 <- format(Sys.Date() - 10, "%d %b %Y")
-
 covid_plot_onset <- covid_data %>% 
    ggplot() +
+     geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
+               fill = "gray85", alpha = 0.05) +
+     geom_label(aes(x = Sys.Date()-6, y = 4.5, 
+                    label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
      geom_col(aes(symptom_onset_date_new, case, fill = gender)) +
-     labs(title = paste0("COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020", 
-                         " (Total cases = ", total_cases, ")"),
-          subtitle = paste0("Data current as of ", date_today, 
-                            ". Cases after ", date_10, " may not yet be reported."),
-          fill = "Gender") +
+     labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
+          subtitle = paste0("Total cases = ", total_cases),
+          fill = " ") +
      ylab("Number of Cases") +
      xlab("Symptom Onset Date") +
-     scale_x_date(date_breaks = "1 day", date_labels = "%d-%b") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  date_labels = "%d-%b") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 12, colour = "black"),
            panel.grid = element_blank(),
-           panel.grid.major.y = element_line(colour = "grey"),
+           panel.grid.major.y = element_line(colour = "gray75"),
            axis.text.x = element_text(size = 12, colour = "black", 
                                      angle = 90, vjust = 0.4),
            axis.text.y = element_text(size = 12, colour = "black"),
-           legend.text = element_text(size = 12, colour = "black"),
            axis.title.y = element_text(size = 12, colour = "black",
                                        margin = unit(c(0, 5, 0, 0), "mm")),
            axis.title.x = element_text(size = 12, colour = "black",
                                        margin = unit(c(5, 0, 0, 0), "mm")),
+           legend.text = element_text(size = 12, colour = "black"),
+           legend.position = "top",
            axis.line.x = element_blank(), 
            axis.line.y = element_blank(), 
-           axis.ticks = element_blank()) +
+           axis.ticks = element_blank())  +
      scale_fill_manual(values = cbPalette) +
      geom_vline(xintercept = as.numeric(as.Date("2020-03-16")), color = "black", 
               size = 1, linetype = "dashed") +
