--- a/MCCHD_covid_figures_public.Rmd
+++ b/MCCHD_covid_figures_public.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Missoula County COVID-19 Cases"
-date: "Data as of April 22, 2020"
+date: "Data as of April 29, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -200,11 +200,14 @@ kable(covid_summary,
    pack_rows("All Cases", 1, 1) %>% 
    pack_rows("Age Group (Years)", 2, 3) %>% 
    pack_rows("Gender", 4, 5) %>% 
-   pack_rows("Travel History", 6, 8) %>% 
-   pack_rows("Contact with Known Case", 9, 10) %>% 
-   pack_rows("Community Spread", 11, 12) %>% 
-   footnote(c("Travel History: case left Missoula County.",
-     "Community Spread: no history of travel and no known contact with a known case."))
+   pack_rows("Reported Travel Outside Missoula County", 6, 8) %>% 
+   pack_rows("Reported Contact with Known Case", 9, 11) %>% 
+   pack_rows("Community Spread", 12, 13) %>% 
+   footnote(c("Community Spread: no history of travel outside county and no known contact with a known case.",
+     "Incidence: the population within age or gender groups is different, so comparing",
+     "'Number' or 'Proportion of Cases' can be misleading. 'Incidence per 100,000 Population'",
+     "is comparing the number of cases you would expect for each age or gender group if the",
+     "groups had the same population – in this case, 100,000 people."))
 ```
 
 
@@ -266,7 +269,7 @@ date_10 <- format(Sys.Date() - 10, "%d %b %Y")
 covid_plot_onset <- covid_data %>% 
    ggplot() +
      geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
-               fill = "gray85", alpha = 0.05) +
+               fill = "gray80", alpha = 0.05) +
      geom_label(aes(x = Sys.Date()-6, y = 4.5, 
                     label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
      geom_col(aes(symptom_onset_date_new, case), 
@@ -296,7 +299,15 @@ covid_plot_onset <- covid_data %>%
                                        margin = unit(c(5, 0, 0, 0), "mm")),
            axis.line.x = element_blank(), 
            axis.line.y = element_blank(), 
-           axis.ticks = element_blank()) 
+           axis.ticks = element_blank()) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-03-16")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-03-16"), label = "Schools close", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-03-28")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-03-28"), label = "Stay at home order", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14))
 
 #covid_plot_onset
 
