--- a/montana_covid_data.Rmd
+++ b/montana_covid_data.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "State of Montana Covid-19 R-values"
 author: "Ethan Walker"
-date: "Data as of April 21, 2020"
+date: "Data as of 8 May 2020"
 output:
   pdf_document: default
   html_document:
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(echo = FALSE, eval = TRUE,
 
 ```{r, message=FALSE}
 library(tidyverse)
+library(plyr)
 library(readxl)
 library(naniar)
 library(lubridate)
@@ -101,8 +102,167 @@ state_data_clean <- state_data %>%
 output_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 #write_rds(state_data_clean, paste0(output_path, "Output/state_data_clean.rds"))
-   
+  
+```
 
+```{r}
+county_function <- function(county_name, data = state_data_clean){
+
+county_data <- data %>% 
+   filter(county == county_name)
+
+county_incidence <- incidence(county_data$dates, 
+                              first_date = "2020-03-13", 
+                              last_date = Sys.Date(),
+                              standard = FALSE)
+county_dates <- as.data.frame(county_incidence$dates) %>% 
+   rename(dates = 1)
+county_cases <- county_incidence$counts
+
+county_data_new <<- county_dates %>% 
+   left_join(county_data, by = "dates") %>% 
+   mutate(case2 = case) %>% 
+   group_by(dates) %>% 
+   pivot_wider(names_from = "hospitalization", values_from = "case") %>% 
+   select(-"NA") %>% 
+   group_by(dates) %>% 
+   pivot_wider(names_from = "outcome", values_from = "case2") %>% 
+   select(-"NA") %>% 
+   group_by(dates) %>% 
+   mutate_at(vars(one_of("N")), sum, na.rm = TRUE) %>% 
+   mutate_at(vars(one_of("Y")), sum, na.rm = TRUE) %>% 
+   mutate_at(vars(one_of("U")), sum, na.rm = TRUE) %>% 
+   mutate_at(vars(one_of("P")), sum, na.rm = TRUE) %>% 
+   mutate_at(vars(one_of("Active")), sum, na.rm = TRUE) %>% 
+   mutate_at(vars(one_of("Deceased")), sum, na.rm = TRUE) %>% 
+   mutate_at(vars(one_of("Recovered")), sum, na.rm = TRUE) %>% 
+   distinct(dates, .keep_all = TRUE) %>% 
+   ungroup() %>% 
+   fill(county, .direction = c("downup")) %>% 
+   fill(region, .direction = c("downup")) %>% 
+   select(-case_no, -age_group, -sex, -mt_case, -age_group2,
+          -age_group2_percent, -state_pop)
+
+
+
+}
+
+missoula_county <- county_function("Missoula")
+gallatin_county <- county_function("Gallatin")
+yellowstone_county <- county_function("Yellowstone")
+richland_county <- county_function("Richland")
+roosevelt_county <- county_function("Roosevelt")
+cascade_county <- county_function("Cascade")
+glacier_county <- county_function("Glacier")
+hill_county <- county_function("Hill")
+liberty_county <- county_function("Liberty")
+pondera_county <- county_function("Pondera")
+toole_county <- county_function("Toole")
+bighorn_county <- county_function("Big Horn")
+carbon_county <- county_function("Carbon")
+fergus_county <- county_function("Fergus")
+gvalley_county <- county_function("Golden Valley")
+musselshell_county <- county_function("Musselshell")
+stillwater_county <- county_function("Stillwater")
+wheatland_county <- county_function("Wheatland")
+beaverhead_county <- county_function("Beaverhead")
+broadwater_county <- county_function("Broadwater")
+deerlodge_county <- county_function("Deer Lodge")
+jefferson_county <- county_function("Jefferson")
+lewisandclark_county <- county_function("Lewis and Clark")
+madison_county <- county_function("Madison")
+meagher_county <- county_function("Meagher")
+park_county <- county_function("Park")
+silverbow_county <- county_function("Silver Bow")
+flathead_county <- county_function("Flathead")
+lake_county <- county_function("Lake")
+lincoln_county <- county_function("Lincoln")
+ravalli_county <- county_function("Ravalli")
+
+
+county_data_combined <- plyr::rbind.fill(missoula_county, gallatin_county,
+                                         yellowstone_county, richland_county,
+                                         roosevelt_county, cascade_county,
+                                         glacier_county, hill_county,
+                                         liberty_county, pondera_county,
+                                         toole_county, bighorn_county,
+                                         carbon_county, fergus_county,
+                                         gvalley_county, musselshell_county,
+                                         stillwater_county, wheatland_county,
+                                         beaverhead_county, broadwater_county,
+                                         deerlodge_county, jefferson_county,
+                                         lewisandclark_county, madison_county,
+                                         meagher_county, park_county,
+                                         silverbow_county, flathead_county,
+                                         lake_county, lincoln_county,
+                                         ravalli_county) 
+
+output_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
+
+write_csv(county_data_combined, paste0(output_path, "Output/county_data_combined.csv"))
+
+carter_county <- county_function("Carter")
+custer_county <- county_function("Custer")
+daniels_county <- county_function("Daniels")
+dawson_county <- county_function("Dawson")
+fallon_county <- county_function("Fallon")
+garield_county <- county_function("Garfield")
+mccone_county <- county_function("McCone")
+phillips_county <- county_function("Phillips")
+priver <- county_function("Powder River")
+prairie_county <- county_function("Prairie")
+rosebud_county <- county_function("Rosebud")
+sheridan_county <- county_function("Sheridan")
+treasure_county <- county_function("Treasure")
+valley_county <- county_function("Valley")
+wibaux_county <- county_function("Wibaux")
+blaine_county <- county_function("Blaine")
+chouteau_county <- county_function("Chouteau")
+teton_county <- county_function("Teton")
+jbasin_county <- county_function("Judith Basin")
+petroleum_county <- county_function("Petroleum")
+sweetgrass_county <- county_function("Sweet Grass")
+granite_county <- county_function("Granite")
+powell_county <- county_function("Powell")
+mineral_county <- county_function("Mineral")
+sanders_county <- county_function("Sanders")
+
+
+
+
+
+
+
+reg1 <- as.data.frame(c("Carter", "Custer", "Daniels", "Dawson", "Fallon", "Garfield", "McCone",
+          "Phillips", "Powder River", "Prairie", "Richland", "Roosevelt", "Rosebud",
+          "Sheridan", "Treasure", "Valley", "Wibaux")) %>% 
+   rename(county = 1) %>% 
+   mutate(region = 1)
+
+reg2 <- as.data.frame(c("Blaine", "Cascade", "Chouteau", "Glacier", "Hill", "Liberty", "Pondera",
+          "Teton", "Toole")) %>% 
+   rename(county = 1) %>% 
+   mutate(region = 2)
+
+reg3 <- as.data.frame(c("Big Horn", "Carbon", "Fergus", "Golden Valley", "Judith Basin",
+          "Musselshell", "Petroleum", "Stillwater", "Sweet Grass", "Wheatland",
+          "Yellowstone")) %>% 
+   rename(county = 1) %>% 
+   mutate(region = 3)
+
+reg4 <- as.data.frame(c("Beaverhead", "Broadwater", "Deer Lodge", "Gallatin", "Granite", "Jefferson",
+          "Lewis and Clark", "Madison", "Meagher", "Park", "Powell", "Silver Bow")) %>% 
+   rename(county = 1) %>% 
+   mutate(region = 4)
+
+reg5 <- as.data.frame(c("Flathead", "Lake", "Lincoln", "Mineral", "Missoula", 
+          "Ravalli", "Sanders")) %>% 
+   rename(county = 1) %>% 
+   mutate(region = 5)
+```
+
+ 
+```{r}
 state_data_wide <- state_data_clean %>% 
    mutate(age_group = factor(age_group,
                              labels = c("<10 yrs", "10 to 19 yrs",
@@ -126,7 +286,7 @@ state_data_wide <- state_data_clean %>%
 state_wide_date <- state_data_wide %>% 
    mutate(region = "state") %>% 
    group_by(dates) %>% 
-   mutate_at(c(6:50), sum, na.rm = TRUE) %>% 
+   mutate_at(c(9:55), sum, na.rm = TRUE) %>% 
    mutate(case = 1,
           daily_cases = sum(case)) %>% 
    arrange(dates) %>% 
@@ -138,7 +298,7 @@ state_wide_date <- state_data_wide %>%
 reg1_wide_date <- state_data_wide %>% 
    filter(region == 1) %>% 
    group_by(dates) %>% 
-   mutate_at(c(6:50), sum, na.rm = TRUE) %>% 
+   mutate_at(c(9:55), sum, na.rm = TRUE) %>% 
    mutate(case = 1,
           daily_cases = sum(case)) %>% 
    arrange(dates) %>% 
@@ -150,7 +310,7 @@ reg1_wide_date <- state_data_wide %>%
 reg2_wide_date <- state_data_wide %>% 
    filter(region == 2) %>% 
    group_by(dates) %>% 
-   mutate_at(c(6:50), sum, na.rm = TRUE) %>% 
+   mutate_at(c(9:55), sum, na.rm = TRUE) %>% 
    mutate(case = 1,
           daily_cases = sum(case)) %>% 
    arrange(dates) %>% 
@@ -162,7 +322,7 @@ reg2_wide_date <- state_data_wide %>%
 reg3_wide_date <- state_data_wide %>% 
    filter(region == 3) %>% 
    group_by(dates) %>% 
-   mutate_at(c(6:50), sum, na.rm = TRUE) %>% 
+   mutate_at(c(9:55), sum, na.rm = TRUE) %>% 
    mutate(case = 1,
           daily_cases = sum(case)) %>% 
    arrange(dates) %>% 
@@ -174,7 +334,7 @@ reg3_wide_date <- state_data_wide %>%
 reg4_wide_date <- state_data_wide %>% 
    filter(region == 4) %>% 
    group_by(dates) %>% 
-   mutate_at(c(6:50), sum, na.rm = TRUE) %>% 
+   mutate_at(c(9:55), sum, na.rm = TRUE) %>% 
    mutate(case = 1,
           daily_cases = sum(case)) %>% 
    arrange(dates) %>% 
@@ -186,7 +346,7 @@ reg4_wide_date <- state_data_wide %>%
 reg5_wide_date <- state_data_wide %>% 
    filter(region == 5) %>% 
    group_by(dates) %>% 
-   mutate_at(c(6:50), sum, na.rm = TRUE) %>% 
+   mutate_at(c(9:55), sum, na.rm = TRUE) %>% 
    mutate(case = 1,
           daily_cases = sum(case)) %>% 
    arrange(dates) %>% 
